# ProjetRACin

./: .gitignore  EmbeddingFactory.py  LlmFactory.py  README.md  alcohol_detections.txt  alcohol_detections_harry-potter.mp4.txt  alcohol_detections_video.mp4.txt  ales.txt  files.tree  gemini.py  harry-potter.mp4.json  le_diner_de_con.mp4.json  main.py  main_rag_grader.py  main_rag_without_grader.py  manuel_monop.txt  ollamaChat.py  pyproject.toml  rag.py  randomSelector.py  requirements.txt  resultScore.py  sequencer.py  testv10.py  transcripter.py  video.mp4.json  video.mp4_rag_grader.json  video.mp4_rag_without_grader.json  videoDetector.py  videoEditor.py  videoana1sec.py
agents/: agent.py  formatter_agent.py  grader_agent.py  image_analysis_agent.py  object_detection_agent.py  scene_analysis_agent.py  transcript_agent.py
chromadb/: chroma.sqlite3
factories/: base_llm_factory.py  embedding_factory.py  faster_whisper_transcripter_factory.py  object_detector_factory.py  ollama_llm_factory.py  transcripter_factory.py  yolov8_object_detector_factory.py
models/: object_detection_model.py  scenes_model.py  transcript_model.py
object_detection_results/: alcohol_detections_harry-potter.mp4.json  alcohol_detections_le_diner_de_con.mp4.json  alcohol_detections_video.mp4.json
outputs/: harry-potter.mp4-analysis.json  harry-potter.mp4-scene1.json  harry-potter.mp4-scene2.json  video.mp4-analysis.json  video.mp4-scene1.json
transcript_results/: harry-potter.mp4-small.json  le_diner_de_con.mp4-small.json  video.mp4-small.json
transcripts/: video-base.txt  (+6 more)
(+2 files in other folders)
